# glace

./: Cargo.toml  README.md  brainstorm.rs  notes.md
glace/: Cargo.toml
glace-derive/: Cargo.toml
glace-derive/src/: lib.rs  uniform_block.rs
glace-program/: Cargo.toml
glace-program-def/: Cargo.toml
glace-program-def/examples/: input.rs
glace-program-def/src/: gen.rs  lib.rs  sig.rs
glace-program-def/src/sig/: mod.rs  uniform_type.rs
glace-program/examples/: input.rs
glace-program/src/: def.rs  gen.rs  input.rs  lib.rs  sig.rs
glace-rush/: Cargo.toml
glace-rush/src/: syntax.rs
glace/examples/: input.rs  trace.rs
glace/src/: gen.rs  lib.rs
glace/src/sig/: mod.rs
glace/src/signature/: mod.rs  uniform.rs  vertex.rs
