[package]
name = "glace"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glace-program-def = { path = "../glace-program-def" }
glace-derive = { optional = true, path = "../glace-derive" }

glow = "0.11"

[features]
derive = ["glace-derive"]