[package]
name = "glace"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.88", features = ["extra-traits"] }
quote = "1.0.7"
glsl = "6.0"
crevice = "0.8"
thiserror = "1.0"
proc-macro2 = "1.0"

glow = "0.11"

glace-derive = { optional = true, path = "../glace-derive" }

[features]
default = ["derive"]
derive = ["glace-derive"]